# HumbleNet

./: CMakeLists.txt
cmake/: UtilityFunctions.cmake
samples/: CMakeLists.txt
samples/sdl2-demo/: CMakeLists.txt  macOSInfo.plist.in  main.cpp
samples/sdl2-demo/assets/: DejaVuSans-30.baked
samples/sdl2-demo/engine/: AssetManager.cpp  AssetManager.h  BakedFont.cpp  BakedFont.h  Color.h  Engine.cpp  Engine.h  Engine_inline.h  FileSystem.cpp  FileSystem.h  Font.h  InputManager.cpp  InputManager.h  Math.h  Rect.h  Renderable.h  Renderer.cpp  Renderer.h  Renderer_SDL2.cpp  Renderer_SDL2.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Texture_SDL2.cpp  Texture_SDL2.h  Updatable.h  Utilities.h  Vector2.h
samples/sdl2-demo/game/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  HostGame.cpp  HostGame.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuItems.cpp  MenuItems.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
samples/sdl2-demo/lib/lodepng/: CMakeLists.txt  SDL_LodePNG.c
